--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Karisma with a K</h1>
+    <a href="http://127.0.0.1:5500/KarismaHackathon/watch.html">Watch Data</a>
 </body>
 </html>
