--- a/watch.html
+++ b/watch.html
@@ -30,7 +30,7 @@
             </select>
             <button type="button">Add</button>  
             <button type="button">Remove</button>
-          </div>
+          </div><br>
         </div>
         <div class="chart">
           <canvas id="allChart"></canvas>
