--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="http://code.jquery.com/jquery.js"></script>
 </head>
@@ -23,8 +23,8 @@
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="stats.html">Stats</a></li>
-            <li><a href="uploads.html">Uploads</a></li>
+            <li><a href="watch.html">Stats</a></li>
+            <li><a href="upload.html">Uploads</a></li>
         </ul>
     </nav>
     <!-- <section></section> -->
@@ -39,8 +39,8 @@
 
     <div class = "videos">
         <video class = "video1" width="320" height="240" controls style='border: 5px solid #DAAD86'>
-            <source src="video1.mp4" type="video/mp4">
-            <source src="video1.mp4" type="video/ogg">
+            <source src="./video1.mp4" type="video/mp4">
+            <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
@@ -48,8 +48,8 @@
         <br>
 
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
-            <source src="video1.mp4" type="video/mp4">
-            <source src="video1.mp4" type="video/ogg">
+            <source src="./video1.mp4" type="video/mp4">
+            <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
@@ -57,8 +57,8 @@
         <br>
 
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
-            <source src="video1.mp4" type="video/mp4">
-            <source src="video1.mp4" type="video/ogg">
+            <source src="./video1.mp4" type="video/mp4">
+            <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
@@ -66,8 +66,8 @@
         <br>
 
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
-            <source src="video1.mp4" type="video/mp4">
-            <source src="video1.mp4" type="video/ogg">
+            <source src="./video1.mp4" type="video/mp4">
+            <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
