added nav to stats page

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="watch.html">Stats</a></li>
-            <li><a href="uploads.html">Uploads</a></li>
+            <li><a href="upload.html">Uploads</a></li>
         </ul>
     </nav>
     <!-- <section></section> -->
