--- a/watch.html
+++ b/watch.html
@@ -6,15 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="./watch.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Watch data</title>
   </head>
   <body>
     <div class="containerAll">
-      <div class="header">
-        <div>
-          <h1>Watch Data</h1>
-        </div>
-      </div>
+      <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+
+        <label class="logo">Karisma With a K</label>
+
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="watch.html">Stats</a></li>
+            <li><a href="upload.html">Uploads</a></li>
+        </ul>
+    </nav>
       <br />
       <div>
         <!-- <input
