adjusted object data set

--- a/index.html
+++ b/index.html
@@ -37,49 +37,55 @@
 
     <br>
 
-    <div class = "videos">
-        <video class = "video1" width="320" height="240" controls style='border: 5px solid #DAAD86'>
+    <div class="video1">
+        <video class="video1" width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
-        <p>Name:</p>
+        <p>Name: Lesson 1: HTML & CSS</p>
+    </div>
 
-        <br>
+    <br>
 
+    <div class="video2">
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
+    </div>
 
-        <br>
+    <br>
 
+    <div class="video3">
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
+    </div>
 
-        <br>
+    <br>
 
+    <div class="video4">
         <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
         <p>Name:</p>
-
-        <br>
+    </div>
+    <br>
 
     </div>
 
     <div class="footer">
         Karisma with a K
     </div>
-<script src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
