welcome to the internet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fas fa-bars"></i>
         </label>
 
-        <label class="logo">Karisma With a K</label>
+        <label class="logo">Karisma</label>
 
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
@@ -27,60 +27,70 @@
             <li><a href="upload.html">Uploads</a></li>
         </ul>
     </nav>
-    <!-- <section></section> -->
     <br>
+    <!-- <section></section> -->
 
     <div class="example" style="margin:auto;max-width:700px">
         <input type="text" placeholder="Search Video" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
     </div>
 
-    <br>
-
-    <div class="video1">
+    <div class="video">
         <video class="video1" width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
-        <p>Name: Lesson 1: HTML & CSS</p>
+
+        <div class="text">
+            <h2>Lesson 1: HTML & CSS</h2><br>
+            <p>The HyperText Markup Language, or HTML is the standard markup language for documents designed to be
+                displayed in a web browser. </p>
+            <p>Cascading Style Sheets is a style sheet language used for describing the presentation of a document
+                written in a markup language such as HTML. </p>
+        </div>
     </div>
 
-    <br>
-
-    <div class="video2">
-        <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
+    <div class="video">
+        <video class="video2" width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
-        <p>Name:</p>
+        <div class="text">
+            <h2>Lesson 2: JavaScript</h2><br>
+            <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows
+                you to make web pages interactive.</p>
+        </div>
     </div>
 
-    <br>
-
-    <div class="video3">
-        <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
+    <div class="video">
+        <video class="video3" width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
-        <p>Name:</p>
+        <div class="text">
+            <h2>Lesson 3: NodeJS</h2><br>
+            <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8
+                engine and executes JavaScript code outside a web browser.</p>
+        </div>
     </div>
 
-    <br>
-
-    <div class="video4">
-        <video width="320" height="240" controls style='border: 5px solid #DAAD86'>
+    <div class="video">
+        <video class="video3" width="320" height="240" controls style='border: 5px solid #DAAD86'>
             <source src="./video1.mp4" type="video/mp4">
             <source src="./video1.mp4" type="video/ogg">
             Your browser does not support the video tag.
         </video>
-        <p>Name:</p>
+        <div class="text">
+            <h2>Lesson 4: ExpressJS</h2><br>
+            <p>Express.js, or simply Express, is a back end web application framework for Node.js, released as free and
+                open-source software under the MIT License. It is designed for building web applications and APIs. It
+                has been called the de facto standard server framework for Node.js.</p>
+        </div>
     </div>
     <br>
-
-    </div>
 
     <div class="footer">
         Karisma with a K
