added about content

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,12 +31,23 @@
     <br>
 
     </div>
-    Karisma is created to solve the off-site teaching and learning problem being face many learning institutions due to Covid-19. 
-    It transforms views into useful data that can be used to improve the off-site online learning experience of their students. The app is designed to track student engagement with learning material by dyamically capturing the video views and putting them in easy to read charts. The app gives the curriculum planner the option to view the overall video views of all the learning content or to compare and contrast between a chosen number of videos on the charts. 
-
+    <h1></h1>
+    <br>
+    <div class="about">
+        <p>
+            Karisma is created to solve the off-site teaching and learning problem being face many learning institutions
+            due to Covid-19.
+            It transforms views into useful data that can be used to improve the off-site online learning experience of
+            their students. The app is designed to track student engagement with learning material by dyamically
+            capturing the video views and putting them in easy to read charts. The app gives the curriculum planner the
+            option to view the overall video views of all the learning content and to compare and contrast between a
+            chosen number of videos on the charts.
+        </p>
+    </div>
     <div class="footer">
         Karisma with a K
     </div>
-    
+
 </body>
+
 </html>
