--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <i class="fas fa-bars"></i>
         </label>
 
-        <label class="logo">Karisma With a K</label>
+        <label class="logo"><a href="index.html">Karisma</a></label>
 
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
