--- a/upload.html
+++ b/upload.html
@@ -16,7 +16,7 @@
         <i class="fas fa-bars"></i>
       </label>
 
-      <label class="logo">Karisma With a K</label>
+      <label class="logo"><a href="index.html">Karisma</a></label>
 
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
@@ -25,6 +25,7 @@
         <li><a href="upload.html">Uploads</a></li>
       </ul>
     </nav>
+    <br>
 
     <div class="container">
       <h1>UPLOAD VID</h1>
