--- a/watch.html
+++ b/watch.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-eq
+    uiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="http://code.jquery.com/jquery.js"></script>
     <link rel="stylesheet" href="./watch.css" />
     <link rel="stylesheet" href="./style.css" />
     <title>Watch data</title>
@@ -17,7 +19,7 @@
             <i class="fas fa-bars"></i>
         </label>
 
-        <label class="logo">Karisma With a K</label>
+        <label class="logo"><a href="index.html">Karisma</a></label>
 
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
