--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
         <label class="logo"><a href="index.html">Karisma</a></label>
 
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="about.html">About</a></li>
             <li><a href="watch.html">Stats</a></li>
             <li><a href="upload.html">Uploads</a></li>
         </ul>
