--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fas fa-bars"></i>
         </label>
 
-        <label class="logo">Karisma</label>
+        <label class="logo"><a href="index.html">Karisma</a></label>
 
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
