--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         </video>
         <div class="text">
             <h2>Lesson 3: NodeJS</h2><br>
-            <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8 engine and executes JavaScript code outside a web browser.</p>
+            <p>Node.js is an open-source, cross-platform, back-end JavaScript runtime environment that runs on the V8
+                engine and executes JavaScript code outside a web browser.</p>
         </div>
     </div>
 
@@ -84,8 +85,10 @@
         </video>
         <div class="text">
             <h2>Lesson 4: ExpressJS</h2><br>
-            <p>Express.js, or simply Express, is a back end web application framework for Node.js, released as free and open-source software under the MIT License. It is designed for building web applications and APIs. It has been called the de facto standard server framework for Node.js.</p>
-        <br>
+            <p>Express.js, or simply Express, is a back end web application framework for Node.js, released as free and
+                open-source software under the MIT License. It is designed for building web applications and APIs. It
+                has been called the de facto standard server framework for Node.js.</p>
+            <br>
         </div>
     </div>
     <br>
@@ -93,6 +96,11 @@
 
     <div class="footer">
         Karisma with a K
+
+        <a href="www.facebook.com" class="fa fa-facebook"></a>
+        <a href="www.twitter.com" class="fa fa-twitter"></a>
+        <a href="index.html" class="fa fa-google"></a>
+        <a href="www,instagram.com" class="fa fa-instagram"></a>
     </div>
     <script src="./main.js"></script>
 </body>
