--- a/about.html
+++ b/about.html
@@ -26,7 +26,6 @@
             <li><a href="upload.html">Uploads</a></li>
         </ul>
     </nav>
-    <!-- <section></section> -->
 
     <br>
 
@@ -50,9 +49,8 @@
         <br>
     </div>
     <div class="footer">
-        Karisma with a K
+        <h4>Karisma with a K</h4>
     </div>
-
 </body>
 
 </html>
