--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
         <br>
         <br>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
         <h4>Karisma with a K</h4>
-    </div>
+    </div> -->
 </body>
 
 </html>
