--- a/upload.html
+++ b/upload.html
@@ -58,9 +58,9 @@
 
   <script src="./upload.js"></script>
 
-  <div class="footer">
+  <!-- <div class="footer">
     <h4>Karisma with a K</h4>
-  </div>
+  </div> -->
 </body>
 
 </html>
