removed uploads nav button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars"></i> 
         </label>
 
         <label class="logo"><a href="index.html">Karisma</a></label>
@@ -24,16 +24,16 @@
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="watch.html">Stats</a></li>
-            <li><a href="upload.html">Uploads</a></li>
+            <!-- <li><a href="upload.html">Uploads</a></li> -->
         </ul>
     </nav>
     <br>
     <!-- <section></section> -->
 
-    <div class="example" style="margin:auto;max-width:700px">
+    <!-- <div class="example" style="margin:auto;max-width:700px">
         <input type="text" placeholder="Search Video" name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
-    </div>
+    </div> -->
 
     <div class="video">
         <video class="video1" width="320" height="240" controls style='border: 5px solid #DAAD86'>
