--- a/watch.html
+++ b/watch.html
@@ -25,7 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="active" href="watch.html">Stats</a></li>
-            <li><a href="upload.html">Uploads</a></li>
+            <!-- <li><a href="upload.html">Uploads</a></li> -->
         </ul>
     </nav>
       <br />
