--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="watch.html">Stats</a></li>
-            <li><a href="upload.html">Uploads</a></li>
+            <!-- <li><a href="upload.html">Uploads</a></li> -->
         </ul>
     </nav>
     <!-- <section></section> -->
